--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Yuan Ning"
 description              : &description "personal description"
 url                      : https://YuanN1ng.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "YuanN1ng.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -25,9 +25,9 @@ author:
   avatar           : "profile.png"
   name             : "Yuan Ning"
   pronouns         : # example: "she/her"  
-  bio              : "An Undergraduated Student"
+  bio              : "Undergraduated Student at Henan University of Technology"
   location         : "Zheng Zhou, Henan, China"
-  employer         : "Henan University of Technology"
+  employer         : #
   uri              : # URL
   email            : "yuanning.nn@gmail.com" 
 
