--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Yuan Ning"
   pronouns         : # example: "she/her"  
   bio              : "Undergraduated Student at Henan University of Technology"
-  location         : "Zheng Zhou, Henan, China"
+  location         : "Zhengzhou, Henan, China"
   employer         : #
   uri              : # URL
   email            : "yuanning.nn@gmail.com" 
